--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -115,7 +115,7 @@
     <main class="container">
         {% block content %}{% endblock %}
     </main>
-    
+    <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_script %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
