--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -100,6 +100,10 @@
           <a class="nav-link" href="{% url 'registration:template_sender' %}">
                     <i class="fas fa-comments me-2"></i>Chat template
                 </a>
+
+                <a class="nav-link" href="{% url 'registration:template_builder' %}">
+                    <i class="fas fa-comments me-2"></i>Create template
+                </a>
                 </div>
             </div>
         </div>
