flow list message

--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -104,6 +104,9 @@
                 <a class="nav-link" href="{% url 'registration:template_builder' %}">
                     <i class="fas fa-comments me-2"></i>Create template
                 </a>
+                <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
+                    <i class="fas fa-comments me-2"></i>Carousel Sender
+                </a>
                 </div>
             </div>
         </div>
