--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -107,6 +107,10 @@
                 <a class="nav-link" href="{% url 'registration:carousel_sender' %}">
                     <i class="fas fa-comments me-2"></i>Carousel Sender
                 </a>
+
+                <a class="nav-link" href="{% url 'registration:carousel_template_builder' %}">
+                    <i class="fas fa-comments me-2"></i>Carousel builder
+                </a>
                 </div>
             </div>
         </div>
@@ -126,7 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_script %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
-     
+    {% block extra_script4 %}{%endblock%}
 
     {% block extra_scripts1 %}{%endblock%}
 
